Fix compositingContainer for stacked inlines.

BUG=681778
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2640053004
Cr-Commit-Position: refs/heads/master@{#445164}

Former-commit-id: 2d6a760cbb0204f306e9312bc39036b75f80c5f2